Added dynamic loading of KotlinModule in mappers, fixes #38